--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,3 +25,12 @@ body {
     background-color: azure;
     cursor: pointer;
 }
+.game-screen{
+    width: 100vw;
+    height: 100vh;
+    background-color: aqua;
+}
+
+.hidden{
+    display: none;
+}
