Create wizard with initial position on start

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,13 @@ body {
     background-color: aqua;
 }
 
+.wizard{
+    background-image: url('../images/wizard.png');
+    background-size: cover;
+    position: absolute;
+   
+}
+
 .hidden{
     display: none;
 }
