--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,6 +37,11 @@ body {
     position: absolute;
    
 }
+.bug {
+    position: absolute;
+    background-image: url("../images/bug.png");
+    background-size: cover;
+}
 
 .hidden{
     display: none;
